fixed audio player size in mainview on smaller screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -495,6 +495,10 @@ loadMore {
     margin-right: auto;
 }
 
+#mainAudioPlayer{
+    width: 100%;
+}
+
 /*
 .btn-group{
     display: inline;
